--- a/hw4/hw4.ipynb
+++ b/hw4/hw4.ipynb
@@ -2087,7 +2087,7 @@
     "\n",
     "where $\\boldsymbol{h}_t$ is the hidden state at time $t$, $\\boldsymbol{x}_t$ is the input at time $t$, and $\\boldsymbol{h}_{t-1}$ is the hidden state of the previous layer at time $t-1$ or the initial hidden state at time $0$. If nonlinearity is `'relu'`, then ReLU is used in place of tanh.\n",
     "\n",
-    "In a multi-layer RNN, the input $\\boldsymbol{x}_t^{(l)}$ of the $l$-th layer ($l \\ge 2$) is the hidden state $\\boldsymbol{h}_t^{(l-1)}$ of the previous layer. When there are multiple layers, we first compute the hidden states of the first layer $\\mathbf{H}^1$ over entire sequences, and then $\\mathbf{H}^l$ serves as inputs to \"deeper\" layers."
+    "In a multi-layer RNN, the input $\\boldsymbol{x}_t^{(l)}$ of the $l$-th layer ($l \\ge 2$) is the hidden state $\\boldsymbol{h}_t^{(l-1)}$ of the previous layer. When there are multiple layers, we first compute the hidden states of the first layer $\\mathbf{H}^1$ over entire sequences, and then $\\mathbf{H}^l$ serves as inputs to \"deeper\" layers. See [here](https://youtu.be/q12VPh-bK7k?t=2394)."
    ]
   },
   {
@@ -2921,12 +2921,12 @@
     "\n",
     "where $\\boldsymbol{h}_t$ is the hidden state at time $t$, $\\boldsymbol{c}_t$ is the cell state at time $t$, $\\boldsymbol{x}_t$ is the input at time $t$, $\\boldsymbol{h}_{t-1}$ is the hidden state of the layer at time $t-1$ or the initial hidden state at time $0$, and $\\boldsymbol{i}_t$, $\\boldsymbol{f}_t$, $\\boldsymbol{g}_t$, $\\boldsymbol{o}_t$ are the input, forget, cell, and output gates at time $t$ respectively. \n",
     "\n",
-    "In a multi-layer LSTM, the input $\\boldsymbol{x}_t^{(l)}$ of the $l$-th layer ($l \\ge 2$) is the hidden state $h_t^{(l-1)}$ of the previous layer.  When there are multiple layers, we first compute the hidden states of the first layer $\\mathbf{H}^1$ over entire sequences, and then $\\mathbf{H}^l$ serves as inputs to \"deeper\" layers."
+    "In a multi-layer LSTM, the input $\\boldsymbol{x}_t^{(l)}$ of the $l$-th layer ($l \\ge 2$) is the hidden state $h_t^{(l-1)}$ of the previous layer.  When there are multiple layers, we first compute the hidden states of the first layer $\\mathbf{H}^1$ over entire sequences, and then $\\mathbf{H}^l$ serves as inputs to \"deeper\" layers. See [here](https://youtu.be/q12VPh-bK7k?t=2394)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2938,7 +2938,7 @@
       "cachedir: .pytest_cache\n",
       "rootdir: /home/willyu/10-414/hw4\n",
       "plugins: anyio-3.6.1\n",
-      "collected 1741 items / 1485 deselected / 256 selected                          \u001b[0m\u001b[1m\n",
+      "collected 1805 items / 1549 deselected / 256 selected                          \u001b[0m\u001b[1m\n",
       "\n",
       "tests/test_sequence_models.py::test_lstm[cpu-True-True-1-1-1-1-1] \u001b[32mPASSED\u001b[0m\u001b[32m [  0%]\u001b[0m\n",
       "tests/test_sequence_models.py::test_lstm[cpu-True-True-1-1-1-1-13] \u001b[32mPASSED\u001b[0m\u001b[32m [  0%]\u001b[0m\n",
@@ -3197,7 +3197,7 @@
       "tests/test_sequence_models.py::test_lstm[cuda-False-False-12-11-15-2-1] \u001b[32mPASSED\u001b[0m\u001b[32m [ 99%]\u001b[0m\n",
       "tests/test_sequence_models.py::test_lstm[cuda-False-False-12-11-15-2-13] \u001b[32mPASSED\u001b[0m\u001b[32m [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============== \u001b[32m\u001b[1m256 passed\u001b[0m, \u001b[33m1485 deselected\u001b[0m\u001b[32m in 8105.65s (2:15:05)\u001b[0m\u001b[32m ===============\u001b[0m\n"
+      "\u001b[32m=============== \u001b[32m\u001b[1m256 passed\u001b[0m, \u001b[33m1549 deselected\u001b[0m\u001b[32m in 213.20s (0:03:33)\u001b[0m\u001b[32m ===============\u001b[0m\n"
      ]
     }
    ],
@@ -3220,13 +3220,9 @@
    "source": [
     "## Part 6: Penn Treebank dataset [10 points]\n",
     "\n",
-    "In word-level language modeling tasks, the model predicts the probability of the next word in the sequence, based on the words already observed in the sequence. You will write support for the Penn Treebank dataset, which consists of stories from the Wall Street Journal, to train and evaluate a language model on word-level prediction.\n",
+    "In word-level language modeling tasks, the model predicts the probability of the next word in the sequence based on the words already observed. You will write support for the Penn Treebank dataset, which consists of stories from the [Wall Street Journal](https://www.wsj.com/), to train and evaluate a language model on word-level prediction.\n",
     "\n",
-    "In `python/needle/data.py`, start by implementing the `Dictionary` class, which creates a dictionary from a list of words, mapping each word to a unique integer.\n",
-    "\n",
-    "Next, we will use this `Dictionary` class to create a corpus from the train and test txt files in the Penn Treebank dataset that you downloaded at the beginning of the notebook. Implement the `tokenize` function in the `Corpus` class to do this.\n",
-    "\n",
-    "In order to prepare the data for training and evaluation, you will next implement the `batchify` function. Starting from sequential data, batchify arranges the dataset into columns. For instance, with the alphabet as the sequence and batch size 4, we'd get\n",
+    "In `data.py`, implement `Dictionary`, which creates a dictionary from a list of words, mapping each word to a unique integer. Next, implement `Corpus.tokenize` with `Dictionary` to create a corpus from the training and test `.txt` files in the dataset. In order to prepare the data for training and evaluation, implement `batchify`. Starting from sequential data, `batchify` arranges the dataset into columns. For instance, with the alphabet as the sequence and batch size $4$, we will get\n",
     "\n",
     "```\n",
     "┌ a g m s ┐\n",
@@ -3237,23 +3233,56 @@
     "└ f l r x ┘\n",
     "```\n",
     "\n",
-    "These columns are treated as independent by the model, which means that the dependence of e. g. 'g' on 'f' cannot be learned, but allows more efficient batch processing.\n",
+    "These columns are treated as <font color=\"red\">independent</font> by the model, which means, e.g., that the dependence of $\\verb|g|$ on $\\verb|f|$ <font color=\"red\">cannot</font> be learned, but allows more efficient batch processing.\n",
     "\n",
-    "Next, implement the `get_batch` function. `get_batch` subdivides the source data into chunks of length `bptt`. If source is equal to the example output of the batchify function, with a bptt-limit of 2, we'd get the following two Variables for i = 0:\n",
+    "Implement `get_batch`. `get_batch` subdivides the source data into chunks of length `bptt`. Given a bptt-limit $2$ and the above output of `batchify`, we will get the following two variables when `i` is $0$. See [hidden unit \"repackaging\"](https://youtu.be/q12VPh-bK7k?t=2610).\n",
+    "\n",
     "```\n",
     "┌ a g m s ┐ ┌ b h n t ┐\n",
     "└ b h n t ┘ └ c i o u ┘\n",
     "```\n",
-    "Note that despite the name of the function, the subdivison of data is not done along the batch dimension (i.e. dimension 1), since that was handled by the batchify function. The chunks are along dimension 0, corresponding to the seq_len dimension in the LSTM or RNN."
+    "Note that despite the name of the function, the subdivison of data is <font color=\"red\">not</font> done along the batch dimension, i.e. dimension 1, since that was handled by `batchify`. The chunks are along dimension 0, corresponding to the `seq_len` dimension in an LSTM or RNN."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform linux -- Python 3.9.13, pytest-7.1.3, pluggy-1.0.0 -- /home/willyu/anaconda3/envs/10-414/bin/python3\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /home/willyu/10-414/hw4\n",
+      "plugins: anyio-3.6.1\n",
+      "collected 1741 items / 1725 deselected / 16 selected                           \u001b[0m\u001b[1m\n",
+      "\n",
+      "tests/test_cifar_ptb_data.py::test_ptb_dataset[cpu-True-3-1] \u001b[32mPASSED\u001b[0m\u001b[32m      [  6%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_ptb_dataset[cpu-True-3-15] \u001b[32mPASSED\u001b[0m\u001b[32m     [ 12%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_ptb_dataset[cpu-True-32-1] \u001b[32mPASSED\u001b[0m\u001b[32m     [ 18%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_ptb_dataset[cpu-True-32-15] \u001b[32mPASSED\u001b[0m\u001b[32m    [ 25%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_ptb_dataset[cpu-False-3-1] \u001b[32mPASSED\u001b[0m\u001b[32m     [ 31%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_ptb_dataset[cpu-False-3-15] \u001b[32mPASSED\u001b[0m\u001b[32m    [ 37%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_ptb_dataset[cpu-False-32-1] \u001b[32mPASSED\u001b[0m\u001b[32m    [ 43%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_ptb_dataset[cpu-False-32-15] \u001b[32mPASSED\u001b[0m\u001b[32m   [ 50%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_ptb_dataset[cuda-True-3-1] \u001b[32mPASSED\u001b[0m\u001b[32m     [ 56%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_ptb_dataset[cuda-True-3-15] \u001b[32mPASSED\u001b[0m\u001b[32m    [ 62%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_ptb_dataset[cuda-True-32-1] \u001b[32mPASSED\u001b[0m\u001b[32m    [ 68%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_ptb_dataset[cuda-True-32-15] \u001b[32mPASSED\u001b[0m\u001b[32m   [ 75%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_ptb_dataset[cuda-False-3-1] \u001b[32mPASSED\u001b[0m\u001b[32m    [ 81%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_ptb_dataset[cuda-False-3-15] \u001b[32mPASSED\u001b[0m\u001b[32m   [ 87%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_ptb_dataset[cuda-False-32-1] \u001b[32mPASSED\u001b[0m\u001b[32m   [ 93%]\u001b[0m\n",
+      "tests/test_cifar_ptb_data.py::test_ptb_dataset[cuda-False-32-15] \u001b[32mPASSED\u001b[0m\u001b[32m  [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m===================== \u001b[32m\u001b[1m16 passed\u001b[0m, \u001b[33m1725 deselected\u001b[0m\u001b[32m in 6.27s\u001b[0m\u001b[32m ======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m pytest -l -v -k \"ptb\""
+    "!python3 -m pytest -l -v -k \"test_ptb\""
    ]
   },
   {
@@ -3271,17 +3300,24 @@
    "source": [
     "## Part 7: Training a word-level language model [10 points]\n",
     "\n",
-    "Finally, you will use the `RNN` and `LSTM` components you have written to construct a language model that we will train on the Penn Treebank dataset.\n",
+    "Finally, use the `RNN` and `LSTM` components you have written to construct a language model to be trained on the Penn Treebank dataset.\n",
     "\n",
-    "First, in `python/needle/nn.py` implement `Embedding`. Consider we have a dictionary with 1000 words. Then for a word which indexes into this dictionary, we can represent this word as a one-hot vector of size 1000, and then use a linear layer to project this to a vector of some embedding size.\n",
+    "In `nn.py` implement `Embedding`. Consider we have a dictionary with $1,000$ words. Then for a word which indexes into this dictionary, we can represent this word as a one-hot vector of size $1,000$, and then use a <font color=\"blue\">`Linear` layer</font> to project this to a vector of some embedding size.\n",
     "\n",
-    "In `apps/models.py`, you can now implement `LanguageModel`. Your language model should consist of \n",
+    "In `../../apps/models.py`, implement `LanguageModel`. Your language model should consist of \n",
     "\n",
-    "- An embedding layer (which maps word IDs to embeddings) \n",
-    "- A sequence model (either RNN or LSTM)\n",
-    "- A linear layer (which outputs probabilities of the next word)\n",
+    "- an `Embedding` layer (which maps word IDs to embeddings) \n",
+    "- a sequence model (either RNN or LSTM)\n",
+    "- a `Linear` layer (which outputs probabilities of the next word)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### An implementation caveat\n",
     "\n",
-    "In `apps/simple_training.py` implement `epoch_general_ptb`, `train_ptb`, and `evaluate_ptb`."
+    "When initial state(s) `h` is not provided, i.e., `None`, I did <font color=\"red\">not</font> initialize it as zero tensor(s) to save memory. Instead, branches are adopted to weed out `h @ W_hh` to save compute. Given a length-<font color=\"blue\">$1$</font> sequence, `W_hh` does <font color=\"red\">not</font> constitute the computational graph even though it is a leaf node. Therefore, it holds <font color=\"red\">no</font> gradient, which will <font color=\"red\">not</font> pass <font color=\"blue\">half</font> of the testcases. I modified `test_language_model_implementation` in [`test_sequence_models.py`](./tests/test_sequence_models.py) bypass checking the gradient of `W_hh` when sequence length is $1$."
    ]
   },
   {
@@ -3291,6 +3327,13 @@
    "outputs": [],
    "source": [
     "!python3 -m pytest -l -v -k \"language_model_implementation\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In `apps/simple_training.py` implement `epoch_general_ptb`, `train_ptb`, and `evaluate_ptb`."
    ]
   },
   {
